# eutils

./: .deepsource.toml  .flake8  .git-blame-ignore-revs  .gitignore  .hgignore  .hgtags  .mailmap  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.txt  Makefile  README.html  README.md  README.rst  TODO  TODO-121  boilerplate.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: labels.yml  python-package.yaml
archive/: eutils-fetch-biopython
doc/: conf.py  contributing.rst  description-long.txt  description-short.txt  description.txt  design  intro.rst  license.rst  modules.rst  using.rst
doc/changelog/: 0.0.rst  0.1.rst  0.2.0.clog  0.2.1.clog  0.2.1.rst  0.2.2.clog  0.2.2.rst  0.2.3.clog  0.2.4.rst  0.2.rst  0.3.0.clog  0.3.0.rst  0.3.1.rst  0.3.rst  0.4.0.clog  0.4.0.rst  0.4.1.clog  0.4.1.rst  0.4.rst  Makefile  hg-git-remap.pl  index.rst
doc/changelog/0.2/: 0.2.0.rst  0.2.3.rst  index.rst
doc/changelog/0.3/: 0.3.2.clog
doc/changelog/0.4/: index.rst
doc/changelog/0.5/: hg-git-remap.pl  index.rst
doc/modules/: eutils.client.rst  eutils.exceptions.rst  eutils.queryservice.rst  eutils.sketchy.clientx.rst  eutils.xmlfacades.rst  overview.rst
docs/: Makefile  conf.py  contributing.rst  design  index.rst  modules.rst  using.rst
docs/changelog/: index.rst
docs/changelog/0.2/: 0.2.4.clog
docs/changelog/0.3/: 0.3.1.clog  0.3.2.rst
docs/changelog/0.5/: 0.5.0.clog  0.5.0.rst  Makefile
docs/changelog/0.6/: 0.6.0.clog  0.6.0.rst  Makefile  index.rst
etc/: dev.reqs  develop.reqs  test.reqs
eutils/: __init__.py  _versionwarning.py  client.py  clientx.py  compat.py  eutilsclient.py  exceptions.py  helpers.py  queryservice.py  sqlitecache.py  utils.py
eutils/_internal/: queryservice.py
eutils/_internal/xmlfacades/: dbinfo.py  dblist.py  dbsnp.py  entrezgene.py  entrezgeneset.py  gbseq.py  pubmedcentralarticleset.py
eutils/clients/: base.py
eutils/resp/: __init__.py  gene.py  pubmedarticle.py  pubmedentry.py  refseq.py
eutils/sketchy/: clientx.py
eutils/xmlfacades/: README.rst  __init__.py  base.py  dbinfo.py  dblist.py  dbsnp.py  einfo.py  einforesult.py  entrezgene.py  entrezgenelocus.py  entrezgeneset.py  esearchresult.py  esearchresults.py  gbseq.py  gbset.py  gene.py  genecommentary.py  genecommentarygenomiccoords.py  medlinecitation.py  pubmed.py  pubmedarticle.py  pubmedarticleset.py  pubmedcentralarticle.py  pubmedcentralarticleset.py  refseq.py  seqinterval.py
misc/: logo.odg  logo.xcf
misc/eutils-xml-examples/: efetch.fcgi?db=gene&id=4747&retmode=xml  efetch.fcgi?db=nuccore&id=319655736&retmode=xml
misc/logo/: logo.odg  logo.xcf
sbin/: eutils-shell  extract-makefile-documentation  makefile-extract-documentation  test-script
src/biocommons/eutils/: __init__.py
src/biocommons/eutils/_internal/: client.py  exceptions.py  queryservice.py  sqlitecache.py  utils.py
src/biocommons/eutils/_internal/xmlfacades/: README.rst  __init__.py  base.py  dbinfo.py  dblist.py  dbsnp.py  einforesult.py  entrezgene.py  entrezgeneset.py  esearchresult.py  gbseq.py  gbset.py  genecommentary.py  medlinecitation.py  pubmedarticle.py  pubmedarticleset.py  pubmedcentralarticle.py  pubmedcentralarticleset.py
src/biocommons/eutils/sketchy/: clientx.py
src/eutils/: __init__.py
src/eutils/_internal/: client.py  exceptions.py  queryservice.py  sqlitecache.py
src/eutils/_internal/xmlfacades/: base.py  dbinfo.py  dblist.py  dbsnp.py  einforesult.py  entrezgene.py  esearchresult.py  gbseq.py  gbset.py  genecommentary.py  medlinecitation.py  pubmedarticle.py  pubmedarticleset.py  pubmedcentralarticle.py  pubmedcentralarticleset.py
src/eutils/sketchy/: clientx.py
tests/: conftest.py  test_eutils_imports.py  test_eutils_queryservice.py  test_eutils_resp_gene.py  test_eutils_resp_pubmed.py  test_eutils_resp_pubmedarticle.py  test_eutils_resp_pubmedentry.py  test_eutils_resp_refseq.py  test_eutils_xmlfacades_dbsnp.py  test_eutils_xmlfacades_einforesult.py  test_eutils_xmlfacades_entrezgeneset.py  test_eutils_xmlfacades_esearchresult.py  test_eutils_xmlfacades_esearchresults.py  test_eutils_xmlfacades_gene.py  test_eutils_xmlfacades_genecommentary.py  test_eutils_xmlfacades_genecommentarygenomiccoords.py  test_eutils_xmlfacades_gi.py  test_eutils_xmlfacades_pubmed.py  test_eutils_xmlfacades_pubmedarticle.py  test_eutils_xmlfacades_pubmedcentralarticle.py  test_pubmedarticle.py  test_rcore_sqllitecache.py  x-test_eutils_xmlfacades_dbsnp.py  x-test_eutils_xmlfacades_gi.py
tests/data/: efetch.fcgi?db=gene&id=4747&retmode=xml.xml  efetch.fcgi?db=nuccore&id=148536845&retmode=xml.xml  efetch.fcgi?db=nuccore&id=41349498&retmode=xml.xml  efetch.fcgi?db=pmc&id=3299399&rettype=xml.xml  efetch.fcgi?db=pubmed&id=20412080&rettype=xml.xml  efetch.fcgi?db=pubmed&id=22351513&retmode=xml.xml  efetch.fcgi?db=pubmed&id=23121403&retmode=xml.xml  efetch.fcgi?db=snp&id=2031,14181&retmode=xml.xml  esearchresults-1.xml
tests/data/cassettes/: test_efetch  test_einfo_dbinfo  test_einfo_dblist  test_elink  test_entrezgeneset  test_esearch  test_esearchresult  test_esummary  test_eutils_xmlfacades_pubmedarticle_20412080  test_eutils_xmlfacades_pubmedarticle_22351513  test_eutils_xmlfacades_pubmedarticle_22528466  test_eutils_xmlfacades_pubmedarticle_23121403  test_eutils_xmlfacades_pubmedarticle_29915538  test_eutils_xmlfacades_pubmedcentralarticle_PMC3299399  test_two_snps
