[metadata]
name = eutils
author = Source Code Contributors
author-email = biocommons-dev@googlegroups.com
home-page = https://github.com/biocommons/eutils
long-description = file:README.rst
long-description-content-type = text/x-rst; charset=UTF-8
description = "Python interface to NCBI's eutilities API"
license-file = LICENSE
platform = any

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    bioinformatics
    eutilities
    ncbi


[options]
packages = find:
python_requires = >= 3.6
zip_safe = true
package_dir =
    = src
install_requires =
    lxml
    pytz
    requests
setup_requires =
    pytest-runner
    setuptools_scm
    wheel
tests_require =
    mock
    pytest
    pytest-cov
    pyyaml
    tox
    vcrpy

# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[options.extras_require]
dev =
    flake8
    ipython
    mock
    pytest
    pytest-cov
    restview
    setuptools
    sphinx
    sphinx_rtd_theme
    tox
    vcrpy
    yapf


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[tool:pytest]
# TODO: add src to testpaths to trigger doctests. However, this
# requires injecting fixtures, which requires conftest.py in src/,
# which requires packaging changes. Deferred.
testpaths = src tests
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
addopts = --doctest-modules --cov-config=setup.cfg --cov-report=term-missing --cov=ga4gh
